# E3

./: .env.example  .flake8  .gitignore  AUDIOBOOK_CLI_PLAN.md  AUDIOBOOK_PIPELINE_REFERENCE.md  AUTOMATION_SETUP.md  OPERATION_GUIDE.md  PROGRESS.md  README.md  README_docs.md  WSL_COMFYUI_SETUP.md  YOUTUBE_SCHEDULING_FIX.md  YOUTUBE_TOKEN_MANAGEMENT.md  audiobook_automation.bat  audiobook_helper.py  audiobook_scheduler.py  check_image_jobs.py  check_status.py  create_audio_jobs.py  create_image_jobs.py  create_tts_audio_jobs.py  generate_audiobook.py  generate_subtitles.py  generate_videos.py  initialize.py  master_cli.py  onboarding.md  parse_novel.py  parse_novel_tts.py  promptcontext.txt  pyproject.toml  requirements.txt  reset_jobs.py  setup.py  tasks.md  test_publish_date_fix.py  test_youtube_credentials.py  youtube_token_manager.py
audiobook_agent/: __init__.py  analyze_entities.py  audiobook_cli.py  audiobook_config.csv  audiobook_helper.py  check_image_jobs.py  cli.py  cli_backup.py  comfyui_trigger.py  create_image_jobs.py  create_tts_audio_jobs.py  generate_audio_scripts.py  generate_image_prompts.py  generate_media.py  generate_prompts.py  generate_subtitles.py  generate_videos.py  generate_voice_designs.py  parse_novel_langchain.py  parse_novel_tts.py  pipeline.py  qwen_tts_engine.py  simple_ffmpeg_combine.py  validate_style.py  visual_styles.py  youtube_schedule.py  youtube_upload.py
comfyui_agent/: __init__.py  __main__.py  cli.py  db_manager.py  executor.py  monitor.py  queue_manager.py  ui_server.py
comfyui_agent/config/: global_config.yaml  workflows.yaml
comfyui_agent/static/: index.html
comfyui_agent/tests/: test_config_loader.py  test_db_manager.py  test_end_to_end.py  test_executor.py  test_file_utils.py  test_logger.py  test_monitor.py  test_queue_manager.py  test_ui_server.py  test_validation.py
comfyui_agent/utils/: __init__.py  config_loader.py  file_utils.py  logger.py  validation.py
config/: global_alpha.yaml  global_prod.yaml
database/: alpha_e3_agent.db-shm  alpha_e3_agent.db-wal
docs/: ARCHITECTURE.md  PRD.md  PRFAQ.md  onboarding.md
docs/images/: E3_Phase1_Architecture.drawio
gutenberg_agent/: gutenberg_bulk_downloader.py  gutenberg_catalog_summary.txt  gutenberg_cli.py  gutenberg_downloader.py  gutenberg_helper.py  gutenberg_metadata.py
jobs/finished/T2I/: T2I_20250809143001_1_portrait.yaml
samples/: 3D_20250809143400_1_object.yaml  AUDIO_20250809143300_1_soundtrack.yaml  SPEECH_20250809143200_1_narration.yaml  T2I_complete_example.yaml  T2I_flux_node_specific.yaml  T2V_20250809143100_1_animation.yaml  comfyui_workflow_output.json  test_job_portrait.yaml  test_job_t2i.yaml  test_job_urgent.yaml
workflows/: T2I_flux1_krea.json  ace-step-v1-t2a_lora.json  test.json  wf_realistic_portrait.json  wf_text_to_image.json
