[project]
name = "e3-comfyui-agent"
version = "0.1.0"
description = "E3 Phase 1: ComfyUI Agent - Execution engine for AI media generation"
authors = [{name = "ViSuReNa LLC"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | legacyfiles
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["legacyfiles/*"]

[tool.pytest.ini_options]
testpaths = ["comfyui_agent/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = ["legacyfiles/"]

[tool.coverage.run]
source = ["comfyui_agent"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "legacyfiles/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.flake8]
# Note: flake8 doesn't support pyproject.toml natively
# These settings would go in .flake8 or setup.cfg
# Listed here for documentation purposes